# resume-analyser-app-using-rag

./: LICENSE  QUICKSTART.md  README.md  config.py  main.py  pyproject.toml  requirements.txt  utils.py
.streamlit/: config.toml
